[project]
name = "everwork"
version = "2.3.3"

requires-python = ">=3.12,<4.0"

dependencies = [
    "loguru",
    "orjson>=3.11.4",
    "psutil>=7.1.3",
    "pydantic>=2.12.4",
    "redis[hiredis]>=7.0.1",
    "uvloop>=0.21.0 ; sys_platform == 'linux'",
]

[tool.uv.sources]
loguru = { git = "https://github.com/Delgan/loguru", rev = "7db92d5a0b5aefaca474bcd50592468a6b8dbd8e" }
