[project]
name = "everwork"
version = "2.3.3"

requires-python = ">=3.12,<4.0"

dependencies = [
    "aiofiles>=25.1.0",
    "loguru",
    "orjson>=3.11.4",
    "pydantic>=2.10.6",
    "redis[hiredis]>=6.4.0",
    "uvloop>=0.21.0 ; sys_platform == 'linux'",
]

[tool.uv.sources]
loguru = { git = "https://github.com/Delgan/loguru", rev = "7db92d5a0b5aefaca474bcd50592468a6b8dbd8e" }
